--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* directives */
-/* @layer components {
+@layer components {
   html {
-    @apply bg-gray-600;
+    @apply text-black;
+    font-family: 'Lato', sans-serif;
   }
   .btn {
     @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
   }
-} */
+}
 
